--- a/about/index.html
+++ b/about/index.html
@@ -373,7 +373,7 @@ Excellent Student from Sun Yat-sen University</p>
     <ul>
       
         <li>
-          <a href="/article/life1/">Hong Canjian invited Professor Ho Chun Loong to participate in his graduation defense</a>
+          <a href="/article/life1/">HONG Canjian successfully defended his thesis</a>
         </li>
       
         <li>
